# otters

./: BACK_DEMOD_IMPL.md  CONTRIBUTING.md  Cargo.toml  FLP_log.md  METRICS_FIX.md  Mayor.md  Process.md  README.md  REGRESSION_ANALYSIS.md  TEST_STATUS.md  TIMEOUT_FIX.md  create_release.sh  phase_1_hurdle.md  summaries.txt
.github/workflows/: ci.yml
docs/: NEG_HYPER.md  OPERATOR_SUPPORT.md  PRD_otter_rust_port.md  PROGRESS.md  REGRESSION_RESULTS_STEP5.md  SESSION_2025-11-24.md  WEIGHTING.md
examples/: basic.rs
src/: lib.rs  main.rs
src/config/: flags.rs  mod.rs  params.rs  stats.rs
src/data/: attribute.rs  clause.rs  clause_store.rs  context.rs  indexing.rs  list.rs  literal.rs  mod.rs  ordering.rs  parent.rs  symbol.rs  term.rs  weight.rs
src/inference/: builder.rs  demod.rs  factor.rs  hints.rs  hyper.rs  linked_ur.rs  lrpo.rs  mod.rs  output.rs  para.rs  prover.rs  resolution.rs  subsume.rs  unify.rs  unit_del.rs  ur.rs
src/parser/: formula.rs  mod.rs  operator.rs  syntax.rs
src/regression/: executor.rs  mod.rs
tests/: smoke_tests.rs  test.rs
